# Synodic-Client

./: .gitignore  gui.py  pyproject.toml  synodic.spec
synodic_client/: __init__.py  client.py  entry.py  schema.py
synodic_client/application/: cli.py  click.py  qt.py
tests/unit/: test_cli.py  test_install.py
