
[project]
description = ""
license = {text = "LGPLv2"}
name = "synodic_client"

authors = [
  {name = "Synodic Software", email = "contact@synodic.software"},
]
readme = "README.md"

dynamic = ["version"]

requires-python = ">=3.12,<3.13"

dependencies = [
  "porringer>=0.0.0",
  "pyside6>=6.6",
  "packaging>=23.1",
]

[project.license-files]
paths = ["LICENSE.md"]

[project.urls]
homepage = "https://github.com/Synodic-Software/Synodic-Client"
repository = "https://github.com/Synodic-Software/Synodic-Client"

[tool.pdm.dev-dependencies]
dev = [
  "pyinstaller>=6.2.0",
]
lint = [
  "black>=23.1.0",
  "isort>=5.10.1",
  "mypy>=1.7.0",
  "pylint>=2.16.1",
]
test = [
  "pytest>=7.1.2",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
]

[tool.pdm.options]
update = ["--update-all"]

[tool.pdm.scripts]
analyze = {shell = "pylint --verbose synodic_client tests"}
format = {shell = "black --check --verbose ."}
lint = {composite = ["analyze", "format", "sort-imports", "type-check"]}
sort-imports = {shell = "isort --check-only --diff --verbose ."}
test = {shell = "pytest --cov=synodic_client --verbose tests"}
type-check = {shell = "mypy ."}

# https://pdm-backend.fming.dev/build_config/#wheel-data-files
[tool.pdm.build.wheel-data]
data = [{path = "data/**/*", relative-to = "data/"}]

[project.gui-scripts]
synodic-client = "synodic_client.application.qt:application"

[tool.pytest.ini_options]
log_cli = true
testpaths = [
  "tests",
]

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

[tool.pylint.MAIN]
extension-pkg-whitelist = ["PySide6"]
load-plugins = [
  "pylint.extensions.code_style",
  "pylint.extensions.typing",
  "pylint.extensions.docstyle",
  "pylint.extensions.docparams",
  "pylint.extensions.private_import",
  "pylint.extensions.bad_builtin",
]

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.parameter_documentation]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
default-docstring-type = "google"

[tool.coverage.report]
skip_empty = true

[build-system]
build-backend = "pdm.backend"
requires = ["pdm.backend"]
